# browserexplorer

./: .gitignore  AGENT.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: AGENT.md  __init__.py  config.py  main.py
app/agent/: AGENT.md  critic.py  models.py  orchestrator.py  planner.py  prompts.py
app/browser/: AGENT.md  __init__.py  element_indexer.py  observer.py  runtime.py  snapshot.py
app/llm/: AGENT.md  client.py  parser.py  schemas.py
app/memory/: AGENT.md  __init__.py  history.py  state.py  store.py
app/safety/: AGENT.md  __init__.py  guardrails.py  policies.py
app/tools/: AGENT.md  __init__.py  base.py  extraction_tools.py  interaction_tools.py  navigation_tools.py  registry.py
app/utils/: AGENT.md  logger.py  retry.py  serialization.py
tests/: AGENT.md  conftest.py  test_agent_support.py  test_config.py  test_end_to_end.py  test_llm.py  test_main.py  test_memory.py  test_observer_indexer.py  test_planner.py  test_runtime.py  test_runtime_unit.py  test_safety.py  test_snapshot.py  test_tools.py  test_tools_unit.py  test_utils.py
tests/fixtures/: sample.html
