[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "browser-agent"
version = "0.1.0"
description = "Structured browser agent skeleton with constrained tool execution."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "playwright>=1.44.0",
  "pydantic>=2.6.0",
  "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
]

[project.scripts]
browser-agent = "app.main:app"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=95 -p no:cacheprovider"

[tool.coverage.run]
source = ["app"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.setuptools.packages.find]
include = ["app*"]
